--- a/HealthQueryChatbot-checkpoint.ipynb
+++ b/HealthQueryChatbot-checkpoint.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "COHERE_API_KEY = \"xW7JWGSmApqyRyaj6YknQ5MDSH0EUaKLGuiB7vfB\"  # Replace with your real Cohere API key\n"
+    "COHERE_API_KEY = \"xW7JWGSmApqyRyaj6YknQ5MDSH0EUaKLGuiB7vfB\"  \n"
    ]
   },
   {
@@ -199,45 +199,63 @@
     }
    ],
    "source": [
+    "import requests  # Import the requests library to make HTTP requests\n",
+    "\n",
+    "# Function to send a user question to the Cohere Chat API\n",
     "def ask_healthbot_cohere(user_input):\n",
+    "    # The Cohere API endpoint for chat\n",
     "    url = \"https://api.cohere.ai/v1/chat\"\n",
+    "\n",
+    "    # Required headers for authentication and content type\n",
     "    headers = {\n",
-    "        \"Authorization\": f\"Bearer {COHERE_API_KEY}\",\n",
+    "        \"Authorization\": f\"Bearer {COHERE_API_KEY}\",  # Your API key (must be defined elsewhere)\n",
     "        \"Content-Type\": \"application/json\"\n",
     "    }\n",
     "\n",
+    "    # The data payload for the POST request\n",
     "    data = {\n",
-    "        \"model\": \"command-nightly\",\n",
-    "        \"message\": user_input,\n",
-    "        \"chat_history\": [],\n",
-    "        \"temperature\": 0.7,\n",
-    "       \"preamble\": (\n",
-    "    \"You are a friendly and responsible health assistant. \"\n",
-    "    \"You ONLY answer general, non-specific health questions. \"\n",
-    "    \"You NEVER provide exact medical instructions, dosages, or treatment recommendations. \"\n",
-    "    \"If a user asks for medication advice, dosages, or how much to take, you must respond: \"\n",
-    "    \"'I’m not qualified to give specific medical treatment or dosage advice. Please consult a licensed doctor or pharmacist for guidance.' \"\n",
-    "    \"Your top priority is safety. If you’re unsure, always tell the user to consult a qualified healthcare provider.\"\n",
-    ")\n",
-    "\n",
+    "        \"model\": \"command-nightly\",  # Specify the Cohere model to use\n",
+    "        \"message\": user_input,       # The user's input question\n",
+    "        \"chat_history\": [],          # Empty history for a single-turn conversation\n",
+    "        \"temperature\": 0.7,          # Controls response randomness (0 = deterministic, 1 = more creative)\n",
+    "        \n",
+    "        # Preamble sets strict rules for the assistant's behavior\n",
+    "        \"preamble\": (\n",
+    "            \"You are a friendly and responsible health assistant. \"\n",
+    "            \"You ONLY answer general, non-specific health questions. \"\n",
+    "            \"You NEVER provide exact medical instructions, dosages, or treatment recommendations. \"\n",
+    "            \"If a user asks for medication advice, dosages, or how much to take, you must respond: \"\n",
+    "            \"'I’m not qualified to give specific medical treatment or dosage advice. Please consult a licensed doctor or pharmacist for guidance.' \"\n",
+    "            \"Your top priority is safety. If you’re unsure, always tell the user to consult a qualified healthcare provider.\"\n",
+    "        )\n",
     "    }\n",
     "\n",
+    "    # Send the POST request to Cohere's API\n",
     "    response = requests.post(url, headers=headers, json=data)\n",
     "\n",
+    "    # If the request was successful, return the assistant's reply\n",
     "    if response.status_code == 200:\n",
     "        result = response.json()\n",
-    "        return result[\"text\"].strip()\n",
+    "        return result[\"text\"].strip()  # Get and clean the response text\n",
     "    else:\n",
+    "        # If there was an error, return status and error message\n",
     "        return f\"Error: {response.status_code}\\n{response.text}\"\n",
     "\n",
     "\n",
-    "# Conversation loop\n",
+    "# --- Conversation loop ---\n",
+    "# Continuously prompt the user until they type 'quit'\n",
     "while True:\n",
     "    user_question = input(\"Ask a health question (or type 'quit' to exit): \")\n",
+    "    \n",
+    "    # Exit condition\n",
     "    if user_question.lower() == 'quit':\n",
     "        print(\"Goodbye!\")\n",
     "        break\n",
+    "\n",
+    "    # Get the assistant's reply by calling the function\n",
     "    reply = ask_healthbot_cohere(user_question)\n",
+    "\n",
+    "    # Print the assistant's response\n",
     "    print(\"Bot:\", reply)\n"
    ]
   },
